* Versão 0.11.20160529_1502-MG

- Melhorias de layout na tela index.php
- Melhorias de layout na tela index.php da admin

Carga: 1h47m

* Versão 0.10.20160528_2227-MG

- Melhorias de layout na tela index.php
- Adicionado layout de administração

Carga: 1h34m

* Versão 0.9.20160527_2013-MG

- Melhorias de layout na tela index.php
- Adicionado seção "Infos"

Carga: 1h11m

* Versão 0.8.20160527_1322-MG

- Melhorias de layout na tela index.php
- Adicionado seção "Evento Master"

Carga: 1h07m

* Versão 0.7.20160526_1048-MG

- Melhorias de layout na tela index.php

Carga: 2h10m