@@ -42,7 +42,7 @@ $settings_page = "templates/settings.php";
         <meta name="author" content="">
         <link rel="icon" href="../../favicon.ico">
 
-        <title>Dashboard Template for Bootstrap</title>
+        <title>Área de administração AJE-MS</title>
 
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
