@@ -1,1 +1,47 @@
-<p>Página de layout não disponível.</p>
+<h3>Slide</h3>
+
+<div id="editSlide"></div>
+
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Titulo</th>
+            <th>Descriçao</th>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <!-- abaixo se encontra a listagem dos transformandos ja cadatrados -->
+        <tr id="slide_1">
+            <td>1</td>
+            <td>Example headline.</td>
+            <td>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</td>
+            <td><a href="#" class="btn btn-info"><span class="glyphicon glyphicon-edit" /></a></td>
+            <td><a href="#" class="btn btn-danger"><span class="glyphicon glyphicon-trash" /></a></td>
+        </tr>    
+        <tr>
+            <td>2</td>
+            <td>Another example headline.</td>
+            <td>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</td>
+            <td><a href="#" class="btn btn-info"><span class="glyphicon glyphicon-edit" /></a></td>
+            <td><a href="#" class="btn btn-danger"><span class="glyphicon glyphicon-trash" /></a></td>
+        </tr>    
+        <tr>
+            <td>3</td>
+            <td>One more for good measure.</td>
+            <td>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</td>
+            <td><a href="#" class="btn btn-info"><span class="glyphicon glyphicon-edit" /></a></td>
+            <td><a href="#" class="btn btn-danger"><span class="glyphicon glyphicon-trash" /></a></td>
+        </tr>      
+    </tbody>
+</table>  
+
+<h3>Sobre</h3>
+
+<p class="text-warning">Ainda não implementado.</p>
+
+<h3>Eventos</h3>
+
+<p class="text-warning">Ainda não implementado.</p>
