@@ -28,6 +28,7 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
+
 /*  GLOBAL
 ------------------------------------------------------------------------------*/
 
@@ -84,8 +85,8 @@ header {
 header nav {
     text-transform: uppercase;
     font-size: 16pt;  
-    height: 120px;
-    margin-bottom: -20px;
+    /*height: 120px;*/
+    /*margin-bottom: -20px;*/
 }
 
 header a.navbar-brand {
@@ -94,9 +95,13 @@ header a.navbar-brand {
 }
 
 header nav li a:hover {
-    color: #555;
+    /*color: #555;*/
 }
 
+
+#header .header-menus {
+    height: 50px;
+}
 /*  SLIDE
 ------------------------------------------------------------------------------*/
 
@@ -117,7 +122,7 @@ header nav li a:hover {
     top: 0;
     left: 0;
     min-width: 100%;
-    height: 500px;
+    /*height: 500px;*/
 }
 
 /*  INFOS
