@@ -3,6 +3,7 @@
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group>
+            <file>file:/C:/xampp/htdocs/AJEMS/Views/index.php</file>
             <file>file:/C:/xampp/htdocs/AJEMS/changelog</file>
         </group>
     </open-files>
