@@ -1,3 +1,10 @@
+* Versão 0.12.20160530_2311-MG
+
+- Melhorias de layout na tela index.php
+- Melhorias de layout na tela index.php da admin
+
+Carga: 1h47m
+
 * Versão 0.11.20160529_1502-MG
 
 - Melhorias de layout na tela index.php
